# rust-basic-auth-jwt

./: Cargo.toml  readme.md
src/: auth.rs  error.rs  main.rs
