[package]
name = "basic-auth-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"]}
jsonwebtoken = "9.2.0"
tokio = {version = "1.35.1", features = ["full"]}
warp = "0.3.6"
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'